<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GUPPY</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_market">MarketActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- FACEBOOK APP ID -->
    <string name="facebookApplicationID">813393702062735</string>

    <string name="Register">register</string>
    <string name="username">username</string>
    <string name="Add_Basket">Sepete Ekle</string>
    <string name="image_description">Image Description</string>

    <string name="BtnGO">Devam</string>
    <string name="btnCheck">Kontrol Et</string>
    <string name="prompt_arrival_time_spinner">Ödeme şeklini seçin</string>
    <string name="Payment_Title">Sipariş Onay</string>
    <string name="Payment_methode">Ödeme şekli</string>
    <string name="arrival_time">Gönderme zamanı</string>
    <string name="text_input_note">Notunuz...</string>
    <string name="spinner_payment_prompt">Ödeme şekli seç</string>
    <string name="btnBack">Geri</string>

    <string name="drawer_open">Open drawer navigation</string>
    <string name="drawer_close">Navigation drawer Close</string>

    <string name="title_user">Kemal KARACA</string>
    <string name="subtitle_user">kskaraca@gmail.com</string>

    <string name="clear"></string>

    <string name="Login">login</string>
    <string name="password">password</string>
    <string name="btn_read_barcode">Barkod Tara</string>
    <string name="Barcode_Title">Yeni Bir Barkod Tara</string>
    <string name="product_title">Coco Cola 1L</string>
    <string name="product_price">2.5 TL</string>
    <string name="favBtn">Favorilere Ekle</string>
    <string name="AddBsktBtn">Sepete Ekle</string>
    <string name="Welcome">Guppy\'ye Hoş Geldiniz..!</string>
    <string name="PaymentResultText">Siparişiniz Başarıyla Bize Ulaşmıştır.</string>
    <string name="PaymentStatusTxt">Teşekkürler!!</string>
    <string name="reorder_btn">Siparişi Tekrarla</string>
    <string name="empty_basket_txt">Sepetiniz Şu Anda Boş Gözüküyor..</string>
    <string name="add_new_product_to_basket">Yeni bir barkod tarayarak veya eski siparişlerinizi tekrarlayarak, sepetinize yeni bir ürün ekleye bilirsiniz.</string>
    <string name="totPrice">Toplam Fiyat</string>
    <string name="productAmountTitle">Ürün Sayısı</string>
    <string name="rate">Puanla</string>
    <string name="networkconnectionerrormessage">Ağ bağlantısı yok gibi. Lütfen WiFi noktası bulmayı deneyin  veya cihazınızın internet ayarlarına gözatın.</string>

</resources>
