<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    tools:context="com.special.MenuActivity$HomeFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            android:src="@drawable/logotrans"/>
        <EditText
            android:id="@+id/TextUsrname"
            android:text="userone@gmail.com"
            android:padding="8dp"
            android:background="@drawable/tab_default"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        </EditText>
        <EditText
            android:id="@+id/TextPsw"
            android:text="userone"
            android:inputType="textPassword"
            android:padding="8dp"
            android:background="@drawable/tab_default"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        </EditText>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/UIButton"
                android:text="@string/Login"
                android:textSize="@dimen/textsize_medium"
                android:padding="12dp"
                android:id="@+id/guppyLogin"
                android:layout_gravity="center"
                android:layout_margin="4dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/UIButtonInverse"
                android:text="@string/Register"
                android:textSize="@dimen/textsize_medium"
                android:padding="12dp"
                android:id="@+id/guppyRegister"
                android:layout_gravity="center"
                android:layout_margin="4dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

