<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OrderFragment"
    style="@style/listViewItem"
    android:layout_margin="15dp">


    <View
        android:id="@+id/order_item_separator"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lvDividerHeight"
        android:background="@color/gray_line"/>


    <TextView
        android:id="@+id/order_product_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        style="@style/listViewPrimaryDetail"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/lvSecondaryTextSize"
        android:text="Coco-Cola 2.5 L"
        android:singleLine="true"
        android:layout_gravity="left"
        />
    <TextView
        android:textIsSelectable="false"
        android:id="@+id/order_product_list_sample"
        style="@style/listViewSecondaryDetail"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/order_product_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/lvSecondaryTextSize"
        android:text="Olips Nane"
        android:singleLine="true"
        android:layout_gravity="left"
        />
    <View
        android:id="@+id/order_button_separator"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/order_product_list_sample"
        android:layout_height="1dp"
        android:background="@color/lvDividerColor"
        />


                <TextView
                android:id="@+id/order_price_title"
                    android:layout_below="@+id/order_button_separator"
                android:layout_width="wrap_content"
                style="@style/listViewSecondaryDetail"
                android:layout_height="wrap_content"
                    android:text="@string/totPrice"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="70dp"

                android:textColor="@color/purple_light"
                />

                <TextView
                    android:id="@+id/order_price"
                    android:layout_width="wrap_content"
                    android:layout_toRightOf="@+id/order_price_title"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/gray"
                    android:textStyle="bold"
                    style="@style/listViewSecondaryDetail"
                    android:layout_marginLeft="10dp"
                    android:layout_below="@+id/order_button_separator"
                    android:text="7 TL"
                    />

                    <TextView
                        android:id="@+id/ordered_amount_title"
                        android:layout_toRightOf="@id/order_price"
                        android:layout_below="@+id/order_button_separator"
                        android:layout_width="wrap_content"
                        style="@style/listViewSecondaryDetail"
                        android:layout_height="wrap_content"
                        android:text="@string/productAmountTitle"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/purple_light"
                        />
                    <TextView
                        android:id="@+id/ordered_product_amount"
                        android:layout_toRightOf="@+id/ordered_amount_title"
                        android:layout_below="@+id/order_button_separator"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        style="@style/listViewSecondaryDetail"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"
                        android:text="Adet :"
                        android:textColor="@color/gray"

                        />

                    <TextView
                        android:id="@+id/order_date"
                        android:layout_below="@id/ordered_product_amount"
                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="40dp"
                        android:layout_height="wrap_content"
                        android:text="5TL"
                        style="@style/listViewSecondaryDetail"
                        android:textColor="@color/purple_dark"
                        android:visibility="invisible"
                        />




<LinearLayout
    android:id="@+id/bootstrapButtonsLayout"
    android:layout_below="@id/order_price_title"
    android:layout_alignParentRight="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="30dp"
    android:paddingTop="10dp"
    android:orientation="horizontal">
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/rateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        bootstrap:bb_icon_left="fa-flag"
        android:text="@string/rate"
        bootstrap:bb_type="default"/>
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/ReOrderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        bootstrap:bb_icon_left="fa-repeat"
        android:text="@string/reorder_btn"
        bootstrap:bb_type="success"/>


</LinearLayout>



</RelativeLayout>
